test/invalid-syntax/fc66494_parenth_declaration/parenth_declaration.mag
-- Author: 66494, Tiago Silva

const (x) : Int = 5

fun main (_) : Unit -> Unit =
    print(x)